--- a/photographer.html
+++ b/photographer.html
@@ -86,10 +86,23 @@
       </div>
     </div>
   </div>
+
+  <!-- STICKY LIKES COUNTER AND PRICE -->
+  <div class="sticky">
+    <div class="total-likes">
+      <i class="fas fa-heart heart heart-global" aria-label="likes"></i>
+    </div>
+    <div class="price-container">
+      <p class="price"></p>
+    </div>
+  </div>
+  
   <script type="text/javascript" src="scripts/factories/media.js"></script>
   <script type="text/javascript" src="/scripts/pages/photographer.js"></script>
   <script type="text/javascript" src="/scripts/utils/contactForm.js"></script>
   <script type="text/javascript" src="/scripts/utils/lightbox.js"></script>
+  <!-- FONT AWESOME KIT -->
+  <script src="https://kit.fontawesome.com/6f34e379e9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
