feat: likes counter

--- a/photographer.html
+++ b/photographer.html
@@ -91,9 +91,10 @@
   <div class="sticky">
     <div class="total-likes">
       <i class="fas fa-heart heart heart-global" aria-label="likes"></i>
+      <span></span>
     </div>
     <div class="price-container">
-      <p class="price"></p>
+      <span class="price"></span>
     </div>
   </div>
   
