--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <main id="main">
     <div class="photographer_section"></div>
   </main>
-  <script type="text/javascript" src="scripts/factories/photographer.js"></script>
-  <script type="text/javascript" src="scripts/pages/index.js"></script>
+  <script src="scripts/factories/photographer.js"></script>
+  <script src="scripts/pages/index.js"></script>
 </body>
 
 </html>
