--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
   </header>
   <main id="main">
     <!-- PHOTOGRAPHER HEADER -->
-    <div class="photograph-header">
+    <section class="photograph-header">
       <div>
         <h1></h1>
         <div></div>
@@ -29,32 +29,38 @@
         Contactez-moi
       </button>
       <img class="photographer-image" alt="">
-    </div>
+    </section>
     <!-- SORT -->
-    <div class="sort">
+    <section class="sort">
       <label for="sort-method">Trier par</label>
-
-      <div class="dropdown">
-        <input class="text-box" type="text" placeholder="..." id="sort-method" readonly>
-        <div class="options">
-          <div class="likes">Popularité</div>
-          <div class="date">Date</div>
-          <div class="title">Titre</div>
+      <button id="sort-method" class="dropdown" tabindex="0" role="button" aria-controls="options"
+        aria-haspopup="listbox" aria-label="Order by" aria-expanded="false">
+        <div class="text-box">...</div>
+        <div class="options" role="listbox">
+          <a href="#" class="likes" data-value="likes" aria-selected="false" aria-hidden="false" aria-label="Trier par popularité"
+            role="option">
+            Popularité</a>
+          <a href="#" class="date" data-value="date" aria-selected="false" aria-hidden="false" aria-label="Trier par date"
+            role="option">Date
+          </a>
+          <a href="#" class="title" data-value="title" aria-selected="false" aria-hidden="false" aria-label="Trier par titre"
+            role="option">
+            Titre</a>
         </div>
-      </div>
-
-    </div>
+      </button>
+    </section>
 
     <!-- PHOTOGRAPHER MEDIAS -->
-    <div class="photograph-medias"></div>
+    <section class="photograph-medias"></section>
   </main>
   <!-- CONTACT MODAL -->
   <div id="contact_modal" aria-labelledby="modal-title" aria-hidden="true">
     <div class="modal">
       <header>
         <h2 id="modal-title">Contactez-moi</h2>
-        <img src="assets/icons/close.svg" aria-label="Close Contact Form" alt="Close Contact Form"
-          onclick="closeModal()">
+        <button aria-label="Close Contact Form" onclick="closeModal()">
+          <img src="assets/icons/close.svg" alt="Close Contact Form">
+        </button>
       </header>
       <form>
         <div>
@@ -79,7 +85,7 @@
   </div>
 
   <!-- LIGHTBOX -->
-  <div class="lightbox" role="group" aria-roledescription="lightbox" aria-label="image closeup view" aria-hidden="true"
+  <div class="lightbox" aria-roledescription="lightbox" aria-label="image closeup view" aria-hidden="true"
     data-lightbox>
     <div class="lightbox-buttons">
       <button class="lightbox-button lightbox-button_close" aria-label="Close dialog" data-lightbox-button-close>
@@ -105,7 +111,7 @@
   <!-- STICKY LIKES COUNTER AND PRICE -->
   <div class="sticky">
     <div class="total-likes">
-      <em class="fas fa-heart heart heart-global" aria-label="likes"></em>
+      <div class="fas fa-heart heart heart-global" aria-label="likes"></div>
       <span></span>
     </div>
     <div class="price-container">
@@ -117,6 +123,7 @@
   <script src="scripts/pages/photographer.js"></script>
   <script src="scripts/utils/contactForm.js"></script>
   <script src="scripts/utils/lightbox.js"></script>
+  
   <!-- FONT AWESOME KIT -->
   <script src="https://kit.fontawesome.com/6f34e379e9.js" crossorigin="anonymous"></script>
 </body>
